--- a/login.html
+++ b/login.html
@@ -1,92 +1,61 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <title>FastQuizz</title>
 
-    <link rel="stylesheet" href="css/bootstrap-grid.css" />
-    <link rel="stylesheet" href="css/bootstrap-reboot.css" />
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <!--<link rel="stylesheet" href="css/bootstrap-grid.css"/>-->
+    <!--<link rel="stylesheet" href="css/bootstrap-reboot.css"/>-->
+    <link rel="stylesheet" href="css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
-    <script src="js/bootstrap.bundle.js"></script>
-    <script src="js/bootstrap.js"></script>
-
-    <style>
-        html,
-        body {
-            height: 100%;
-        }
-
-        body {
-            display: -ms-flexbox;
-            display: -webkit-box;
-            display: flex;
-            -ms-flex-align: center;
-            -ms-flex-pack: center;
-            -webkit-box-align: center;
-            align-items: center;
-            -webkit-box-pack: center;
-            justify-content: center;
-            background-color: #f5f5f5;
-        }
-    </style>
+    <!--<script src="js/bootstrap.bundle.js"></script>-->
 
 </head>
-
-<body id="page-top">
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+<body>
+<header>
+    <nav class="navbar navbar-expand-md navbar-light">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/Lgo.png" alt="" width="20%" height="20%"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="index.html">
+                <img src="img/Lgo.png" alt="FastQuizz logo" id="logoMenu">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapseFastQuizzMenu"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
+            <div class="collapse navbar-collapse" id="collapseFastQuizzMenu">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#about">A propos</a>
+                        <a class="nav-link text-dark" href="login.html"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#services">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+                        <a class="nav-link text-dark" href="#"></a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
+</header>
+<main role="main" id="loginPage">
     <form class="form-signin">
-        <div class="text-center mb-4">
-            <img class="mb-4" src="img/LgoSml.png" alt="" width="100%" height="100%">
-            <h1 class="h3 mb-3 font-weight-normal">Floating labels</h1>
-        </div>
-
-        <div class="form-label-group">
-            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-            <label for="inputEmail">Email address</label>
-        </div>
-
-        <div class="form-label-group">
-            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
-            <label for="inputPassword">Password</label>
-        </div>
-
-        <div class="checkbox mb-3">
+        <img class="mb-4 text-center" src="img/LgoSml.png" alt="Logo FastQuizz">
+        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <label for="inputEmail" class="sr-only">Email address</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <div class="checkbox mb-3 w-100">
             <label>
                 <input type="checkbox" value="remember-me"> Remember me
             </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <p class="mt-5 mb-3 text-muted text-center">© 2017-2018</p>
+        <button class="btn btn-lg bg-light-blue hover-lighten rounded-0 text-white mt-2 btn-block" type="submit">Sign in</button>
+        <p class="mt-5 mb-3 text-muted">&copy; 2019 Copyright - Fast Quizz Inc.</p>
     </form>
+</main>
 
-    <script src="js/script.js"></script>
+<script src="js/jquery.js"></script>
+<script src="js/bootstrap.js"></script>
+<script src="js/script.js"></script>
 </body>
-
 </html>
