--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
             </label>
         </div>
         <button class="btn btn-lg bg-light-blue hover-lighten rounded-0 text-white mt-2 btn-block" type="submit">Sign in</button>
-        <p class="mt-5 mb-3 text-muted">&copy; 2019 Copyright - Fast Quizz Inc.</p>
+        <p class="mt-5 mb-3 text-muted">&copy; 2019 Copyright - Fast Quizz NotInc.</p>
     </form>
 </main>
 
