--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
             Subscribe now to be able to make or respond to quizzes
         </h4>
 
-        <button type="button" class="btn btn-lg bg-light-blue hover-lighten rounded-0 text-white mt-5">Subscribe now</button>
+        <button type="button" class="btn btn-lg bg-brandblue hover-lighten rounded-0 text-white mt-5">Subscribe now</button>
     </div>
 </main>
 
 <!-- Footer -->
 <footer>
     <div class="container">
-        <p class="m-0 text-center text-white">&copy; 2019 Copyright - Fast Quizz Inc.</p>
+        <p class="m-0 text-center text-white">&copy; 2019 Copyright - Fast Quizz NotInc.</p>
     </div>
 </footer>
 <script src="js/jquery.js"></script>
