--- a/login.html
+++ b/login.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     <!--<script src="js/bootstrap.bundle.js"></script>-->
-
 </head>
 <body>
 <header>
