--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a class="nav-link text-dark" href="login.html">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Signup</a>
+                        <a class="nav-link text-dark" href="signup.html">Signup</a>
                     </li>
                 </ul>
             </div>
@@ -44,7 +44,7 @@
             Subscribe now to be able to make or respond to quizzes
         </h4>
 
-        <button type="button" class="btn btn-lg bg-brandblue hover-lighten rounded-0 text-white mt-5">Subscribe now</button>
+        <a href="signup.html"><button type="button" class="btn btn-lg bg-brandblue hover-lighten rounded-0 text-white mt-5">Subscribe now</button></a>
     </div>
 </main>
 
