--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <a class="nav-link text-dark" href="login.html">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="subscription.html">Subscribe</a>
+                        <a class="nav-link text-dark" href="subscription.html">Sign up</a>
                     </li>
                 </ul>
             </div>
@@ -46,8 +46,14 @@
         </h4>
 
         <a href="subscription.html">
-            <button type="button" class="btn btn-lg bg-light-blue hover-lighten rounded-0 text-white mt-5">
+            <button type="button" class="btn btn-lg bg-dark-blue hover-lighten rounded-0 text-white mt-5">
                 Subscribe now
+            </button>
+        </a>
+
+        <a href="quizzList.html">
+            <button type="button" class="btn btn-lg bg-light-grey hover-lighten rounded-0 text-white mt-5">
+                Try it now
             </button>
         </a>
     </div>
