--- a/subscription.html
+++ b/subscription.html
@@ -47,7 +47,8 @@
         <input type="text" id="inputPseudo" class="form-control rounded-0" placeholder="Pseudo" required autofocus>
 
         <label for="inputFirstName" class="sr-only">First name</label>
-        <input type="text" id="inputFirstName" class="form-control rounded-0" placeholder="First name" required autofocus>
+        <input type="text" id="inputFirstName" class="form-control rounded-0" placeholder="First name" required
+               autofocus>
 
         <label for="inputLastName" class="sr-only">Last name</label>
         <input type="text" id="inputLastName" class="form-control rounded-0" placeholder="Last name" required autofocus>
@@ -55,10 +56,12 @@
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control rounded-0" placeholder="Password" required>
 
-        <label for="inputPasswordCheck" class="sr-only">Type again password</label>
-        <input type="password" id="inputPasswordCheck" class="form-control" placeholder="Type again password" required>
+        <label for="inputPasswordConfirm" class="sr-only">Re-enter password</label>
+        <input type="password" id="inputPasswordConfirm" class="form-control" placeholder="Re-enter password" required>
 
-        <button class="btn btn-lg bg-light-blue hover-lighten rounded-0 text-white mt-2 btn-block" type="submit">Register</button>
+        <button class="btn btn-lg bg-light-blue hover-lighten rounded-0 text-white mt-2 btn-block" type="submit">
+            Register
+        </button>
         <p class="mt-5 mb-3 text-muted">&copy; 2019 Copyright - Fast Quizz Inc.</p>
     </form>
 </main>
@@ -66,5 +69,20 @@
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/script.js"></script>
+<script>
+    var password = document.getElementById("inputPassword")
+        , confirm_password = document.getElementById("inputPasswordConfirm");
+
+    function validatePassword() {
+        if (password.value != confirm_password.value) {
+            inputPasswordConfirm.setCustomValidity("Please Match Passwords!");
+        } else {
+            inputPasswordConfirm.setCustomValidity('');
+        }
+    }
+
+    inputPassword.onchange = validatePassword;
+    inputPasswordConfirm.onkeyup = validatePassword;
+</script>
 </body>
 </html>
