--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <a href="subscription.html">
             <button type="button" class="btn btn-lg bg-dark-blue hover-lighten rounded-0 text-white mt-5">
-                Subscribe now
+                Signup
             </button>
         </a>
 
