--- a/quizzResult.html
+++ b/quizzResult.html
@@ -28,12 +28,6 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="quizzList.html">Quizz List</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="quizzResult.html">Results</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Logout</a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -44,14 +38,14 @@
     <div class="container container-fluid">
         <div class="row flex-row flex-wrap">
 
-            <div class="col-lg-3 col-md-6 mt-md-3 mt-sm-5 mt-xs-3 mt-3" v-for="quizz in quizzes">
+            <div class="col-lg-12 col-md-12 mt-md-3 mt-sm-5 mt-xs-3 mt-3" v-for="quizz in quizzes">
                 <div class="col-12 quizz-box">
                     <a href="#">
                         <div class="title-description-container">
                             <h3 class="title">{{ quizz.title }}</h3>
                             <h6 class="description">{{ quizz.description }}</h6>
+                            <h3>ResultsFromUser / {{ quizzesQuestions[quizz.id].questions.length  }}</h3>
                         </div>
-                        <button type="button" class="bottom-button text-light text-center">Start</button>
                     </a>
                 </div>
             </div>
