--- a/quizzResult.html
+++ b/quizzResult.html
@@ -38,13 +38,13 @@
     <div class="container container-fluid">
         <div class="row flex-row flex-wrap">
 
-            <div class="col-lg-12 col-md-12 mt-md-3 mt-sm-5 mt-xs-3 mt-3" v-for="quizz in quizzes">
+            <div class="col-lg-12 col-md-12 mt-md-3 mt-sm-5 mt-xs-3 mt-3" v-for="(quizz, key) in quizzes">
                 <div class="col-12 quizz-box">
                     <a href="#">
                         <div class="title-description-container">
                             <h3 class="title">{{ quizz.title }}</h3>
                             <h6 class="description">{{ quizz.description }}</h6>
-                            <h3>ResultsFromUser / {{ quizzesQuestions[quizz.id].questions.length  }}</h3>
+                            <h3>ResultsFromUser / {{ quizzesQuestions[0].questions.length  }}</h3>
                         </div>
                     </a>
                 </div>
